@@ -671,8 +671,6 @@ libsystemd_shared_la_SOURCES = \
 	src/shared/login-shared.h \
 	src/shared/async.c \
 	src/shared/async.h \
-	src/shared/eventfd-util.c \
-	src/shared/eventfd-util.h \
 	src/shared/copy.c \
 	src/shared/copy.h
 
