@@ -41,6 +41,7 @@ systemd System and Service Manager
  	- quote more shell characters in envfiles;
  	- fix error message in socket label util;
  	- rename id _UNIT_FILE_PRESET_MODE_MAX to _UNIT_FILE_PRESET_MAX;
+ 	- remove eventfd util;
  * virt:
  	- rework container detection logic;
  * po:
